tests/invalid/no_semicolon.c
int main() {
    return 0
}
// ERROR: Line 3, Error 2003
